add new properties file